个人中心功能完成

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -30,6 +30,7 @@ a {
     text-align: center;
     line-height: 60px;
     border-bottom: 1px solid rgb(19, 18, 18);
+    user-select: none;
 }
 
 .layui-nav-img {
